--- a/PAGINA WEB/index.html
+++ b/PAGINA WEB/index.html
@@ -17,7 +17,7 @@
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
-        <!-- ------------------------------Naviehgación---------------------------------------------------------------->
+        <!-- ------------------------------Navegación---------------------------------------------------------------->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,7 +43,7 @@
                 <a class="btn btn-primary btn-xl text-uppercase" href="#services">Más info.</a>
             </div>
         </header>
-        <!--------------------------------------------------------- Servicios------------------------>
+        <!----------------------------------------- Servicios----------------------------------------->
         <section class="page-section" id="services">
             <div class="container">
                 <div class="text-center">
@@ -101,7 +101,7 @@
                 </div>
             </div>
         </section>
-        <!----------------------------------- Galeria------------------------------------------------------------>
+        <!-------------------------------------------------------Galeria------------------------------------------------------->
         <section class="page-section bg-light" id="portfolio">
             <div class="container">
                 <div class="text-center">
@@ -365,7 +365,7 @@
                             <div class="fw-bolder">¡Envío de formulario exitoso!!</div>
                          </div>
                     </div>
-                    <!------------------Error al envair el error mensaje-->
+                    <!------------------Error al envair el error mensaje--------------------------------------------->
                     
                     <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error de envio!</div></div>
                     <!--- -------------Boton Enviar---------------------->
